fix: p di berita text align center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,10 @@
   margin: 30px 0px;
 }
 
+.berita p {
+  text-align: left;
+}
+
 /* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
